app/src/test/resources/programs/valid/conditionals/conditionalsInsideLoop.exe
// Conditional inside a loop
foo main() -> Int = {
    let mut x: Int = 0;
    loop {
        if x >= 5 then {
            break x
        } else {
            x = x + 1
        }
    }
}
