app/src/test/resources/programs/invalid/conditionals/usingInvalidFunctionCallAsCondition.exe
// Using a function returning 'Int' as condition
foo getValue() -> Int = 0;

foo main() -> Int = {
    if getValue() then 1 else 0
}
